--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* define body feature */
 body{
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     color: #777;
@@ -10,6 +11,7 @@ body{
     clear: both;
 }
 
+/* define header feature */
 .header {
     background: #ebebeb;
     width: 100%;
@@ -18,6 +20,7 @@ body{
     padding-bottom: 20px;
 }
 
+/* define navigation bar feature */
 .nav {
     background: #ebebeb;
     width: 100%;
@@ -27,12 +30,14 @@ body{
     padding-bottom: 20px;
 }
 
+/* define flexbox so that section and aside have the same height */
 .flexbox {
     display: flex;
     width: 100%;
     justify-content: space-between;
 }
 
+/* define section features */
 .section {
     background: #ebebeb;
     text-align: center;
@@ -45,6 +50,7 @@ body{
     margin-right: auto;
 }
 
+/* define article features */
 .article {
     background: #777;
     color: #ebebeb;
@@ -56,6 +62,7 @@ body{
     margin-right: auto;
 }
 
+/* define h1 features */
 h1 {
     background: #ebebeb;
     color: #777;
@@ -68,6 +75,7 @@ h1 {
     padding-bottom: 10px;
 }
 
+/* define paragraph features */
 p {
     background: #ebebeb;
     color: #777;
@@ -79,6 +87,7 @@ p {
     padding-bottom: 10px;
 }
 
+/* define aside container features */
 .aside {
     background: #ebebeb;
     text-align: center;
@@ -90,6 +99,7 @@ p {
     padding-top: 20px;
 }
 
+/* define footer features */
 .footer {
     background: #ebebeb;
     width: 100%;
